improved mobile compatability by reintroducing dark mode button, adjusting container size for time descriptions, fixing button sizes and smaller font sizes on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
 }
 body{
     -webkit-font-smoothing: subpixel-antialiased;
+    overflow-x: hidden;
 }
 ::-webkit-scrollbar{
     width: 10px;
@@ -16,12 +17,17 @@ body{
     border-radius: 10px;
 }
 .testing_div{
-    display: flex;
+    display:flex;
     flex-direction: column;
-    height: 200px;
-    width: 600px;
+    height: 100%;
+    min-width: 300px;
+    max-width: 800px;
     animation: switch 1s  ease-out;
-
+}
+@container (max-width: 500px){
+    .testing_div{
+        font-size: 13px;
+    }
 }
 
 @keyframes switch {
@@ -86,8 +92,6 @@ html{
     .stack{
         font-size: 0.7em
     }
-
-
 }
 .aboutme_desc{
     width: 500px;
@@ -276,6 +280,7 @@ input:invalid:focus{
 
 #particle-container{
     z-index: 1;
+    overflow: hidden;
 }
 
 
@@ -470,8 +475,8 @@ input:invalid:focus{
 /* resume timeline */
 
 .timeline{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
     margin-top: 10px;
     height: 300px;
     width: 80%;
@@ -482,10 +487,10 @@ input:invalid:focus{
     background-color: slategray;
 }
 .panel{
-    display: flex;
+    display: block;
+    position: relative;
     flex-direction: column;
-    margin-right: 40px;
-    width: 10vw;
+    min-width: 10rem;
 }
 
 .tab-1{
@@ -495,6 +500,7 @@ input:invalid:focus{
     border: none;
     border-left: 3px solid slategray ;;
     font-size: 18px;
+    min-width: 6rem;
     width: 90%;
     height: 50px;
     display: flex;
@@ -943,10 +949,7 @@ input:invalid:focus{
     container: element / inline-size;
 }
 
-@container element (min-width:1630px){
-    display: none; 
 
-}
 
 .description{
     height: 140px;
